--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ alembic==1.12.1
 psycopg2-binary==2.9.9
 pydantic==2.5.0
 pydantic-settings==2.1.0
+pydantic[email]==2.5.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
