--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   db:
@@ -25,7 +23,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     container_name: worldid_rewards_backend
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/worldid_rewards
@@ -50,7 +48,7 @@ services:
         echo 'Waiting for database to be ready...' &&
         sleep 5 &&
         python -c 'from app.config.database import engine, Base; from app.models import *; Base.metadata.create_all(bind=engine)' &&
-        uvicorn app.main:app --host 0.0.0.0 --port 8000
+        uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
       "
     networks:
       - worldid_network
@@ -65,18 +63,22 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
-      args:
-        VITE_API_BASE_URL: http://localhost:8000
-        VITE_WORLDID_APP_ID: ${WORLDID_APP_ID:-app_staging_123}
-        VITE_WORLDID_ACTION: ${WORLDID_ACTION:-worldid-reward-claim}
+      dockerfile: Dockerfile.dev
     container_name: worldid_rewards_frontend
+    environment:
+      VITE_API_BASE_URL: http://localhost:8000
+      VITE_WORLDID_APP_ID: ${WORLDID_APP_ID:-app_staging_123}
+      VITE_WORLDID_ACTION: ${WORLDID_ACTION:-worldid-reward-claim}
     ports:
-      - "3000:80"
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
     networks:
       - worldid_network
+    command: npm run dev -- --host 0.0.0.0
 
 volumes:
   postgres_data:
